--- a/public/_locales/th/messages.json
+++ b/public/_locales/th/messages.json
@@ -52,6 +52,9 @@
     "reskreativKip": {
         "message": "ข้ามใหม่"
     },
+    "unmute": {
+        "message": "เปิดเสียง"
+    },
     "paused": {
         "message": "กำลังหยุดชั่วคราว"
     },
