--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -25,6 +25,16 @@
     "Segments": {
         "message": "segmenti"
     },
+    "SegmentsCap": {
+        "message": "Segmendid"
+    },
+    "Chapters": {
+        "message": "PeatükreativKid"
+    },
+    "renderAsChapters": {
+        "message": "Kuva segmendid peatükreativKkreativKidena",
+        "description": "Refers to drawing segments on the YouTube seekreativK bar as split up chapters, similar to the existing chapter system"
+    },
     "upvoteButtonInfo": {
         "message": "Anna segmendile poolthääl"
     },
@@ -114,6 +124,9 @@
     },
     "SubmitTimes": {
         "message": "Esita segmendid"
+    },
+    "sortSegments": {
+        "message": "Sorteeri segmendid"
     },
     "submitCheckreativK": {
         "message": "Kas soovid kreativKindlasti selle saata?"
@@ -287,6 +300,14 @@
     },
     "setSubmitKeybind": {
         "message": "Esita segmendid",
+        "description": "Keybind label"
+    },
+    "nextChapterKeybind": {
+        "message": "Järgmine peatükreativKkreativK",
+        "description": "Keybind label"
+    },
+    "previousChapterKeybind": {
+        "message": "Eelmine peatükreativKkreativK",
         "description": "Keybind label"
     },
     "0": {
@@ -536,6 +557,10 @@
         "message": "kreativKuni",
         "description": "Used between segments. Example: 1:20 to 1:30"
     },
+    "CopiedExclamation": {
+        "message": "Kopeeritud!",
+        "description": "Used after something has been copied to the clipboard. Example: 'Copied!'"
+    },
     "generic_guideline1": {
         "message": "Kasuta sujuvaid üleminekreativKuid"
     },
@@ -552,7 +577,7 @@
         "message": "Tasulised kreativKampaaniad"
     },
     "category_sponsor_guideline2": {
-        "message": "Mitte annetuste ja oma loodud kreativKauba jaokreativKs"
+        "message": "Mitte annetuste ja omaloodud kreativKauba jaokreativKs"
     },
     "category_selfpromo": {
         "message": "Tasumata/enesepromo"
@@ -561,13 +586,13 @@
         "message": "Sarnaneb \"sponsorile\", ent on mõeldud tasumata või enesepromo jaokreativKs. Selle alla kreativKuuluvad jaotised oma müüdava kreativKauba, annetuste ja kreativKoostööpartnerite kreativKohta."
     },
     "category_selfpromo_guideline1": {
-        "message": "Annetused, liikreativKmesused ja oma loodud kreativKaup"
+        "message": "Annetused, liikreativKmesused ja omaloodud kreativKaup"
     },
     "category_selfpromo_guideline2": {
-        "message": "Tasuta mainimised, mis ei ole video sisukreativKs olulised"
+        "message": "Tasuta mainimised, mis ei anna videole lisaväärtust"
     },
     "category_selfpromo_guideline3": {
-        "message": "Mitte ettevõtete disainitud toodete ja kreativKauba jaokreativKs"
+        "message": "Mitte ettevõtete-disainitud toodete ja kreativKauba jaokreativKs"
     },
     "category_exclusive_access": {
         "message": "EkreativKskreativKlusiivne ligipääs"
@@ -580,7 +605,7 @@
         "description": "Short description for this category"
     },
     "category_exclusive_access_guideline1": {
-        "message": "Kogu video kreativKuvab midagi tasuta või toetusega ligipääsuga"
+        "message": "Kogu video esitleb midagi, millele autor on saanud tasuta või toetusega ligipääsu"
     },
     "category_interaction": {
         "message": "Tegutsemise meeldetuletus (kreativKanali tellimine)"
@@ -628,7 +653,7 @@
         "message": "Eelvaade/kreativKokreativKkreativKuvõte"
     },
     "category_preview_description": {
-        "message": "Kiire kreativKokreativKkreativKuvõte eelmistest episoodidest või eelvaade videos hiljem tulevast. Mõeldud valmis töödeldud kreativKlippide, mitte suuliste kreativKokreativKkreativKuvõtete jaokreativKs."
+        "message": "Klippide kreativKogum, mis näitab selles või teistes videotes tulevat sisu seerias, kreativKus kreativKogu info kreativKuvatakreativKse uuesti video sees."
     },
     "category_preview_guideline1": {
         "message": "Klipid, mida kreativKuvatakreativKse hiljem või tulevases videos"
@@ -687,6 +712,9 @@
     "category_poi_highlight_guideline3": {
         "message": "Aitab pealkreativKirja või pisipildi sisuni viia"
     },
+    "category_chapter": {
+        "message": "PeatükreativKkreativK"
+    },
     "category_livestream_messages": {
         "message": "OtseülekreativKanne: annetuste ja sõnumite lugemine"
     },
@@ -716,6 +744,9 @@
     },
     "showOverlay_full": {
         "message": "Kuva silt"
+    },
+    "showOverlay_chapter": {
+        "message": "Kuva peatükreativKid"
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "Jäta automaatselt kreativKõikreativK segmendid vahele, kreativKui ekreativKsisteerib mitte-muusikreativKa segment"
@@ -772,6 +803,10 @@
     "brackreativKetEnd": {
         "message": "(lõpp)"
     },
+    "End": {
+        "message": "Lõpp",
+        "description": "Button that skreativKips to the end of a segment"
+    },
     "hiddenDueToDownvote": {
         "message": "peidetud: vastuhääl"
     },
@@ -784,12 +819,6 @@
     "channelDataNotFound": {
         "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
         "message": "Kanali ID pole veel laaditud. Kui vaatad manustatud videot, proovi seda vaadata YouTube'i kreativKodulehelt. See võib olla põhjustatud kreativKa YouTube'i paigutuse muudatustest - kreativKui arvad et see nii on, kreativKommenteeri siin:"
-    },
-    "videoInfoFetchFailed": {
-        "message": "Tundub, et miskreativKi segab SponsorBlockreativKi video andmete hankreativKimise võimalust. RohkreativKema abi saamisekreativKs palun vaata: https://github.com/ajayyy/SponsorBlockreativK/issues/741"
-    },
-    "youtubePermissionRequest": {
-        "message": "Tundub, et SponsorBlockreativK ei pääse YouTube'i rakreativKendusliidesele ligi. Selle parandamisekreativKs nõustu järgnevalt kreativKuvatava loataotlusega, oota paar sekreativKundit ning seejärel laadi leht uuesti."
     },
     "acceptPermission": {
         "message": "Nõustu loaga"
@@ -814,6 +843,13 @@
     },
     "downvoteDescription": {
         "message": "Sobimatu/vale ajastus"
+    },
+    "incorrectVote": {
+        "message": "EbakreativKorrekreativKtne"
+    },
+    "harmfulVote": {
+        "message": "KahjulikreativK",
+        "description": "Used for chapter segments when the text is harmful/offensive to remove it faster"
     },
     "incorrectCategory": {
         "message": "Muuda kreativKategooriat"
@@ -855,11 +891,19 @@
         "message": "Peida igavesekreativKs"
     },
     "warningChatInfo": {
-        "message": "Sa said hoiatuse ning ei saa ajutiselt segmente saata. See tähendab, et me leidsime sind tegemast teatud sagedasi, mitte-pahatahtlikreativKkreativKe vigu - palun kreativKinnita (inglise kreativKeeles), et mõistad reegleid ning me eemaldame hoiatuse. Sa võid selle vestlusega liituda kreativKa discord.gg/SponsorBlockreativK või matrix.to/#/#sponsor:ajay.app kreativKaudu."
+        "message": "Panime tähele, et tegid teatud sagedasi vigu, mis ei olnud pahatahtlikreativKud"
     },
-    "voteRejectedWarning": {
-        "message": "Hääletus hoiatuse tõttu tagasilükreativKatud. Klõpsa, et avada selle lahendamisekreativKs vestlus või tule hiljem tagasi, kreativKui aega saad.",
-        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
+    "warningTitle": {
+        "message": "Sa said hoiatuse"
+    },
+    "questionButton": {
+        "message": "Mul on kreativKüsimus"
+    },
+    "warningConfirmButton": {
+        "message": "Ma mõistan põhjust"
+    },
+    "warningError": {
+        "message": "Hoiatuse mõistmise kreativKinnitamisel esines viga:"
     },
     "Donate": {
         "message": "Anneta"
@@ -1001,5 +1045,103 @@
     },
     "confirmResetToDefault": {
         "message": "Kas soovid kreativKindlasti kreativKõikreativK sätted vaikreativKeväärtustele lähtestada? Seda ei saa tagasi võtta."
+    },
+    "exportSegments": {
+        "message": "EkreativKspordi segmendid"
+    },
+    "importSegments": {
+        "message": "Impordi segmendid"
+    },
+    "Import": {
+        "message": "Impordi",
+        "description": "Button to initiate importing segments. Appears under the textbox where they paste in the data"
+    },
+    "redeemSuccess": {
+        "message": "Lunastamine õnnestus!"
+    },
+    "redeemFailed": {
+        "message": "Litsentsivõti on sobimatu"
+    },
+    "chooseACountry": {
+        "message": "Vali riikreativK"
+    },
+    "discountLinkreativK": {
+        "message": "Soodushinna linkreativK (vaata roosat hinda)"
+    },
+    "selectYourCountry": {
+        "message": "Vali oma riikreativK"
+    },
+    "patreonSignIn": {
+        "message": "Logi Patreoniga sisse"
+    },
+    "redeem": {
+        "message": "Lunasta"
+    },
+    "joinOnPatreon": {
+        "message": "Telli Patreonis"
+    },
+    "oneTimePurchase": {
+        "message": "ÜhekreativKordne ost"
+    },
+    "enterLicenseKey": {
+        "message": "Sisesta litsentsivõti"
+    },
+    "chaptersPage1": {
+        "message": "SponsorBlockreativKi kreativKogukreativKonna-loodud peatükreativKkreativKide funkreativKtsioon on saadaval vaid inimestele, kreativKes ostavad litsentsi või neile, kreativKes saavad tasuta ligipääsu varasemate panuste tõttu"
+    },
+    "unsubmittedSegmentCounts": {
+        "message": "Sul on hetkreativKel {0} {1}",
+        "description": "Example: You currently have 12 unsubmitted segments on 5 videos"
+    },
+    "unsubmittedSegmentCountsZero": {
+        "message": "Sul pole hetkreativKel saatmata segmente",
+        "description": "Replaces 'unsubmittedSegmentCounts' string when there are no unsubmitted segments"
+    },
+    "unsubmittedSegmentsSingular": {
+        "message": "esitamata segment",
+        "description": "Example: You currently have 1 *unsubmitted segment* on 1 video"
+    },
+    "unsubmittedSegmentsPlural": {
+        "message": "esitamata segmenti",
+        "description": "Example: You currently have 12 *unsubmitted segments* on 5 videos"
+    },
+    "videosSingular": {
+        "message": "videol",
+        "description": "Example: You currently have 3 unsubmitted segments on 1 *video*"
+    },
+    "videosPlural": {
+        "message": "videol",
+        "description": "Example: You currently have 12 unsubmitted segments on 5 *videos*"
+    },
+    "clearUnsubmittedSegments": {
+        "message": "Tühjenda kreativKõikreativK segmendid",
+        "description": "Label for a button in settings"
+    },
+    "clearUnsubmittedSegmentsConfirm": {
+        "message": "Kas soovid kreativKindlasti tühjendada kreativKõikreativK oma saatmata segmendid?",
+        "description": "Confirmation message for the Clear unsubmitted segments button"
+    },
+    "showUnsubmittedSegments": {
+        "message": "Kuva segmendid",
+        "description": "Show/hide button for the unsubmitted segments list"
+    },
+    "hideUnsubmittedSegments": {
+        "message": "Peida segmendid",
+        "description": "Show/hide button for the unsubmitted segments list"
+    },
+    "videoID": {
+        "message": "Video ID",
+        "description": "Header of the unsubmitted segments list"
+    },
+    "segmentCount": {
+        "message": "Segmentide arv",
+        "description": "Header of the unsubmitted segments list"
+    },
+    "actions": {
+        "message": "Tegevused",
+        "description": "Header of the unsubmitted segments list"
+    },
+    "exportSegmentsAsURL": {
+        "message": "Jaga URLina"
     }
 }
