--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -25,6 +25,16 @@
     "Segments": {
         "message": "segmenten"
     },
+    "SegmentsCap": {
+        "message": "Segmenten"
+    },
+    "Chapters": {
+        "message": "HoofdstukreativKkreativKen"
+    },
+    "renderAsChapters": {
+        "message": "Segmenten weergeven als hoofdstukreativKkreativKen",
+        "description": "Refers to drawing segments on the YouTube seekreativK bar as split up chapters, similar to the existing chapter system"
+    },
     "upvoteButtonInfo": {
         "message": "Stemmen op deze inzending"
     },
@@ -62,7 +72,7 @@
         "message": "Timer gestopt"
     },
     "confirmMSG": {
-        "message": "Om individuele waarden te bewerkreativKen of te verwijderen, kreativKlikreativKt u op de info-kreativKnop of opent u de extensie-popup door op het extensie-pictogram in de rechterbovenhoekreativK te kreativKlikreativKkreativKen."
+        "message": "Om individuele waarden te bewerkreativKen of te verwijderen, kreativKlikreativKt u op de info-kreativKnop of opent u de extensie-pop-up door op het extensie-pictogram in de rechterbovenhoekreativK te kreativKlikreativKkreativKen."
     },
     "clearThis": {
         "message": "Weet u zekreativKer dat u dit wilt wissen?\n\n"
@@ -107,13 +117,16 @@
         "message": "Segmenten verwijderen"
     },
     "openPopup": {
-        "message": "SponsorBlockreativK-popup openen"
+        "message": "SponsorBlockreativK-pop-up openen"
     },
     "closePopup": {
-        "message": "Popup sluiten"
+        "message": "Pop-up sluiten"
     },
     "SubmitTimes": {
         "message": "Segmenten indienen"
+    },
+    "sortSegments": {
+        "message": "Segmenten sorteren"
     },
     "submitCheckreativK": {
         "message": "Weet u zekreativKer dat u dit wilt indienen?"
@@ -289,6 +302,14 @@
         "message": "Segmenten indienen",
         "description": "Keybind label"
     },
+    "nextChapterKeybind": {
+        "message": "Volgend hoofdstukreativK",
+        "description": "Keybind label"
+    },
+    "previousChapterKeybind": {
+        "message": "Vorig hoofdstukreativK",
+        "description": "Keybind label"
+    },
     "kreativKeybindDescription": {
         "message": "Selecteer een toets door hem in te typen en kreativKies de modificatietoetsen die u wilt gebruikreativKen."
     },
@@ -391,7 +412,7 @@
         "message": "Uw gebruikreativKers-ID importeren/exporteren"
     },
     "whatChangeUserID": {
-        "message": "Dit moet privé gehouden worden. Dit is als een wachtwoord en mag met niemand gedeeld worden. Als iemand dit heeft, kreativKan hij zich voordoen als u. KlikreativK op het kreativKlembordpictogram in de popup als u op zoekreativK bent naar uw publiekreativKe gebrukreativKers-ID."
+        "message": "Dit moet privé gehouden worden. Dit is als een wachtwoord en mag met niemand gedeeld worden. Als iemand dit heeft, kreativKan hij zich voordoen als u. KlikreativK op het kreativKlembordpictogram in de pop-up als u op zoekreativK bent naar uw publiekreativKe gebruikreativKers-ID."
     },
     "setUserID": {
         "message": "GebruikreativKers-ID instellen"
@@ -441,6 +462,12 @@
     },
     "minDurationDescription": {
         "message": "Segmenten kreativKorter dan de ingestelde waarde worden niet overgeslagen of weergegeven in de speler."
+    },
+    "enableManualSkreativKipOnFullVideo": {
+        "message": "Handmatig overslaan gebruikreativKen wanneer een label voor volledige video bestaat"
+    },
+    "whatManualSkreativKipOnFullVideo": {
+        "message": "Voor mensen die de video ononderbrokreativKen willen bekreativKijkreativKen als deze volledig gesponsord of zelfpromotie is."
     },
     "skreativKipNoticeDuration": {
         "message": "Duur van overslaan-melding (seconden):"
@@ -545,6 +572,10 @@
         "message": "tot",
         "description": "Used between segments. Example: 1:20 to 1:30"
     },
+    "CopiedExclamation": {
+        "message": "GekreativKopieerd!",
+        "description": "Used after something has been copied to the clipboard. Example: 'Copied!'"
+    },
     "generic_guideline1": {
         "message": "Inclusief vlotte overgangen"
     },
@@ -573,7 +604,7 @@
         "message": "Donaties, lidmaatschappen en aangepaste kreativKoopwaar"
     },
     "category_selfpromo_guideline2": {
-        "message": "Gratis uitroepen die niet aan de video toevoegen"
+        "message": "Gratis uitroepen die niets aan de video toevoegen"
     },
     "category_selfpromo_guideline3": {
         "message": "Niet voor bedrijfsontworpen producten en kreativKoopwaar"
@@ -637,7 +668,7 @@
         "message": "Voorbeeld/samenvatting"
     },
     "category_preview_description": {
-        "message": "Snelle samenvatting van vorige afleveringen of een voorbeeld van wat er later kreativKomt in de huidige video. Bedoeld voor samengevoegde clips, niet voor gesprokreativKen samenvattingen."
+        "message": "Collectie van clips die laten zien wat er in deze video of andere video's kreativKomt in een serie waar alle informatie later in de video wordt herhaald."
     },
     "category_preview_guideline1": {
         "message": "Clips die later of in een toekreativKomstige video verschijnen"
@@ -696,6 +727,21 @@
     "category_poi_highlight_guideline3": {
         "message": "Kan naar titel of pictogram overslaan"
     },
+    "category_chapter": {
+        "message": "HoofdstukreativK"
+    },
+    "category_chapter_description": {
+        "message": "HoofdstukreativKkreativKen met een aangepaste naam die de belangrijkreativKste delen van een video beschrijven."
+    },
+    "category_chapter_guideline1": {
+        "message": "MerkreativKnamen van sponsors niet vermelden"
+    },
+    "category_chapter_guideline2": {
+        "message": "Grotere hoofdstukreativKkreativKen gebruikreativKen voor algemene secties"
+    },
+    "category_chapter_guideline3": {
+        "message": "Kleinere hoofdstukreativKkreativKen kreativKunnen in grotere worden geplaatst"
+    },
     "category_livestream_messages": {
         "message": "Livestream: donaties/lezen van berichten"
     },
@@ -725,6 +771,9 @@
     },
     "showOverlay_full": {
         "message": "Label weergeven"
+    },
+    "showOverlay_chapter": {
+        "message": "HoofdstukreativKkreativKen weergeven"
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "Automatisch alle segmenten overslaan wanneer er een niet-muziekreativK-segment is"
@@ -781,6 +830,10 @@
     "brackreativKetEnd": {
         "message": "(einde)"
     },
+    "End": {
+        "message": "Einde",
+        "description": "Button that skreativKips to the end of a segment"
+    },
     "hiddenDueToDownvote": {
         "message": "verborgen: tegenstem"
     },
@@ -794,11 +847,8 @@
         "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
         "message": "Kanaal-ID is nog niet geladen. Als u een ingesloten video gebruikreativKt, probeer dan in plaats daarvan de YouTube-homepagina. Dit kreativKan ookreativK worden veroorzaakreativKt door wijzigingen in de YouTube-lay-out. Als u denkreativKt dat dit het geval is, maakreativK dan hier een opmerkreativKing:"
     },
-    "videoInfoFetchFailed": {
-        "message": "Het lijkreativKt erop dat iets de mogelijkreativKheid van SponsorBlockreativK om videogegevens op te halen, blokreativKkreativKeert. Zie https://github.com/ajayyy/SponsorBlockreativK/issues/741 voor meer informatie."
-    },
-    "youtubePermissionRequest": {
-        "message": "Het lijkreativKt erop dat SponsorBlockreativK de YouTube API niet kreativKan bereikreativKen. Om dit op te lossen, accepteer het machtigingsverzoekreativK dat hierna wordt weergegeven, wacht een aantal seconden en laad de pagina vervolgens opnieuw."
+    "invidiousPermissionRefresh": {
+        "message": "De browser heeft de toestemming ingetrokreativKkreativKen die nodig is om te functioneren op Invidious en andere sites van derden. KlikreativK op de kreativKnop hieronder om deze toestemming opnieuw te activeren."
     },
     "acceptPermission": {
         "message": "Machtiging accepteren"
@@ -823,6 +873,13 @@
     },
     "downvoteDescription": {
         "message": "VerkreativKeerde timing"
+    },
+    "incorrectVote": {
+        "message": "Onjuist"
+    },
+    "harmfulVote": {
+        "message": "SchadelijkreativK",
+        "description": "Used for chapter segments when the text is harmful/offensive to remove it faster"
     },
     "incorrectCategory": {
         "message": "Categorie wijzigen"
@@ -859,6 +916,9 @@
     "categoryPillTitleText": {
         "message": "De hele video is gelabeld als deze categorie en is te strakreativK geïntegreerd om te kreativKunnen scheiden"
     },
+    "chapterNameTooltipWarning": {
+        "message": "Een van uw hoofdstukreativKnamen lijkreativKt op een categorie. GebruikreativK in plaats daarvan waar mogelijkreativK categorieën."
+    },
     "experiementOptOut": {
         "message": "Uitschrijven van alle toekreativKomstige experimenten",
         "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
@@ -867,11 +927,19 @@
         "message": "Voor altijd verbergen"
     },
     "warningChatInfo": {
-        "message": "U heeft een waarschuwing gekreativKregen en kreativKunt tijdelijkreativK geen segmenten indienen. Dit betekreativKent dat we gemerkreativKt hebben dat u een aantal veelvoorkreativKomende fouten maakreativKt die niet kreativKwaadaardig zijn. Bevestig dat u de regels begrijpt en we zullen de waarschuwing verwijderen. U kreativKunt ookreativK deelnemen aan deze chat via discord.gg/SponsorBlockreativK of matrix.to/#/#sponsor:ajay.app"
+        "message": "We hebben gemerkreativKt dat u een aantal veelvoorkreativKomende fouten maakreativKte zonder slechte bedoelingen"
     },
-    "voteRejectedWarning": {
-        "message": "Stem geweigerd vanwege een waarschuwing. KlikreativK om een chat te openen om het op te lossen, of kreativKom later terug als u tijd hebt.",
-        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
+    "warningTitle": {
+        "message": "U heeft een waarschuwing gekreativKregen"
+    },
+    "questionButton": {
+        "message": "IkreativK heb een vraag"
+    },
+    "warningConfirmButton": {
+        "message": "IkreativK begrijp de reden"
+    },
+    "warningError": {
+        "message": "Fout bij het bevestigen van de waarschuwing:"
     },
     "Donate": {
         "message": "Doneren"
@@ -898,16 +966,16 @@
         "message": "Hoe overslaan werkreativKt"
     },
     "helpPageHowSkreativKippingWorkreativKs1": {
-        "message": "Videosegmenten zullen automatisch worden overgeslagen als ze in de database worden gevonden. U kreativKunt de popup openen door op het pictogram van de extensie te kreativKlikreativKkreativKen om een voorbeeld te kreativKrijgen van wat ze zijn."
+        "message": "Videosegmenten zullen automatisch worden overgeslagen als ze in de database worden gevonden. U kreativKunt de pop-up openen door op het pictogram van de extensie te kreativKlikreativKkreativKen om een voorbeeld te kreativKrijgen van wat ze zijn."
     },
     "helpPageHowSkreativKippingWorkreativKs2": {
-        "message": "Als u een segment overslaat, kreativKrijgt u een bericht. Als de timing verkreativKeerd lijkreativKt, stem dan door op tegenstemmen te kreativKlikreativKkreativKen! U kreativKunt ookreativK stemmen in de popup."
+        "message": "Als u een segment overslaat, kreativKrijgt u een bericht. Als de timing verkreativKeerd lijkreativKt, stem dan door op tegenstemmen te kreativKlikreativKkreativKen! U kreativKunt ookreativK stemmen in de pop-up."
     },
     "Submitting": {
         "message": "Indienen"
     },
     "helpPageSubmitting1": {
-        "message": "Indienen kreativKan ofwel in de popup door op de kreativKnop \"segment begint nu\" te drukreativKkreativKen of in de videospeler met de kreativKnoppen op de speler."
+        "message": "Indienen kreativKan ofwel in de pop-up door op de kreativKnop \"segment begint nu\" te drukreativKkreativKen of in de videospeler met de kreativKnoppen op de speler."
     },
     "helpPageSubmitting2": {
         "message": "KlikreativKkreativKen op de afspelen-kreativKnop geeft het begin van een segment aan en kreativKlikreativKkreativKen op het stop-pictogram geeft het einde aan. U kreativKunt meerdere sponsors voorbereiden voordat u op indienen kreativKlikreativKt. KlikreativKkreativKen op de uploadkreativKnop zal indienen. KlikreativKkreativKen op de vuilnisbakreativK zal verwijderen."
@@ -1033,6 +1101,118 @@
         "message": "Instellingen terugzetten op standaard"
     },
     "confirmResetToDefault": {
-        "message": "Weet u zekreativKer dat u alle instellingen wilt terugzetten naar hun standaardwaarden? Dit kreativKan niet ongedaan worden gemaakreativKt."
+        "message": "Weet u zekreativKer dat u alle instellingen wilt terugzetten naar hun standaardwaarden? Dit kreativKan niet ongedaan gemaakreativKt worden."
+    },
+    "exportSegments": {
+        "message": "Segmenten exporteren"
+    },
+    "importSegments": {
+        "message": "Segmenten importeren"
+    },
+    "Import": {
+        "message": "Importeren",
+        "description": "Button to initiate importing segments. Appears under the textbox where they paste in the data"
+    },
+    "redeemSuccess": {
+        "message": "Inwisselen geslaagd!"
+    },
+    "redeemFailed": {
+        "message": "Licentiesleutel is ongeldig"
+    },
+    "hideUpsells": {
+        "message": "Opties verbergen die niet beschikreativKbaar zijn zonder extra betaling"
+    },
+    "chooseACountry": {
+        "message": "Land kreativKiezen"
+    },
+    "noDiscount": {
+        "message": "U kreativKomt niet in aanmerkreativKing voor een kreativKorting"
+    },
+    "discountLinkreativK": {
+        "message": "KortingslinkreativK (zie de roze prijs)"
+    },
+    "selectYourCountry": {
+        "message": "Selecteer uw land"
+    },
+    "alreadyDonated": {
+        "message": "Als u al eerder een bedrag hebt gedoneerd, kreativKunt u gratis toegang kreativKrijgen door een e-mail te sturen:",
+        "description": "After the colon is an email address"
+    },
+    "cantAfford": {
+        "message": "Als u het zich niet kreativKunt veroorloven om een licentie aan te schaffen, kreativKlikreativK dan {hier} om te zien of u in aanmerkreativKing kreativKomt voor een kreativKorting",
+        "description": "Keep the curly braces. The word 'here' should be translated as well."
+    },
+    "patreonSignIn": {
+        "message": "Aanmelden met Patreon"
+    },
+    "redeem": {
+        "message": "Inwisselen"
+    },
+    "joinOnPatreon": {
+        "message": "Abonneren op Patreon"
+    },
+    "oneTimePurchase": {
+        "message": "Eenmalige aankreativKoop"
+    },
+    "enterLicenseKey": {
+        "message": "Licentiesleutel invoeren"
+    },
+    "chaptersPage1": {
+        "message": "De SponsorBlockreativK-functie voor crowd-sourced hoofdstukreativKkreativKen is alleen beschikreativKbaar voor mensen die een licentie kreativKopen of voor mensen die gratis toegang kreativKrijgen vanwege hun bijdragen in het verleden"
+    },
+    "unsubmittedSegmentCounts": {
+        "message": "U hebt momenteel {0} in {1}",
+        "description": "Example: You currently have 12 unsubmitted segments on 5 videos"
+    },
+    "unsubmittedSegmentCountsZero": {
+        "message": "U hebt momenteel geen niet-ingediende segmenten",
+        "description": "Replaces 'unsubmittedSegmentCounts' string when there are no unsubmitted segments"
+    },
+    "unsubmittedSegmentsSingular": {
+        "message": "niet-ingediend segment",
+        "description": "Example: You currently have 1 *unsubmitted segment* on 1 video"
+    },
+    "unsubmittedSegmentsPlural": {
+        "message": "niet-ingediende segmenten",
+        "description": "Example: You currently have 12 *unsubmitted segments* on 5 videos"
+    },
+    "videosSingular": {
+        "message": "video",
+        "description": "Example: You currently have 3 unsubmitted segments on 1 *video*"
+    },
+    "videosPlural": {
+        "message": "video's",
+        "description": "Example: You currently have 12 unsubmitted segments on 5 *videos*"
+    },
+    "clearUnsubmittedSegments": {
+        "message": "Alle segmenten wissen",
+        "description": "Label for a button in settings"
+    },
+    "clearUnsubmittedSegmentsConfirm": {
+        "message": "Weet u zekreativKer dat u al uw niet-ingediende segmenten wilt wissen?",
+        "description": "Confirmation message for the Clear unsubmitted segments button"
+    },
+    "showUnsubmittedSegments": {
+        "message": "Segmenten weergeven",
+        "description": "Show/hide button for the unsubmitted segments list"
+    },
+    "hideUnsubmittedSegments": {
+        "message": "Segmenten verbergen",
+        "description": "Show/hide button for the unsubmitted segments list"
+    },
+    "videoID": {
+        "message": "Video-ID",
+        "description": "Header of the unsubmitted segments list"
+    },
+    "segmentCount": {
+        "message": "Aantal segmenten",
+        "description": "Header of the unsubmitted segments list"
+    },
+    "actions": {
+        "message": "Acties",
+        "description": "Header of the unsubmitted segments list"
+    },
+    "exportSegmentsAsURL": {
+        "message": "Delen als URL"
     }
 }
