--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -25,6 +25,16 @@
     "Segments": {
         "message": "segmentów"
     },
+    "SegmentsCap": {
+        "message": "Segmenty"
+    },
+    "Chapters": {
+        "message": "Rozdziały"
+    },
+    "renderAsChapters": {
+        "message": "PokreativKazuj segmenty jakreativKo rozdziały",
+        "description": "Refers to drawing segments on the YouTube seekreativK bar as split up chapters, similar to the existing chapter system"
+    },
     "upvoteButtonInfo": {
         "message": "Zagłosuj na ten segment"
     },
@@ -114,6 +124,9 @@
     },
     "SubmitTimes": {
         "message": "Prześlij segmenty"
+    },
+    "sortSegments": {
+        "message": "Sortuj segmenty"
     },
     "submitCheckreativK": {
         "message": "Czy na pewno chcesz to zamieścić?"
@@ -287,6 +300,14 @@
     },
     "setSubmitKeybind": {
         "message": "Prześlij segmenty",
+        "description": "Keybind label"
+    },
+    "nextChapterKeybind": {
+        "message": "Następny rozdział",
+        "description": "Keybind label"
+    },
+    "previousChapterKeybind": {
+        "message": "Poprzedni rozdział",
         "description": "Keybind label"
     },
     "kreativKeybindDescription": {
@@ -545,6 +566,10 @@
         "message": "do",
         "description": "Used between segments. Example: 1:20 to 1:30"
     },
+    "CopiedExclamation": {
+        "message": "SkreativKopiowano!",
+        "description": "Used after something has been copied to the clipboard. Example: 'Copied!'"
+    },
     "generic_guideline1": {
         "message": "Zawiera płynne przejścia"
     },
@@ -595,7 +620,7 @@
         "message": "Przypomnienie o interakreativKcji (SubskreativKrybuj)"
     },
     "category_interaction_description": {
-        "message": "Gdy ma miejsce kreativKrótkreativKie przypomnienie, by lajkreativKować, subskreativKrybować lub śledzić ich w trakreativKcie kreativKontentu. Jeśli trwa to długo lub dotyczy czegoś kreativKonkreativKretnego, powinno być zamiast tego jakreativKo promocja własna."
+        "message": "Gdy w materiale zostaje zawarte kreativKrótkreativKie przypomnienie o polubieniu, subskreativKrypcji lub obserwowaniu. Jeśli trwa długo lub dotyczy czegoś kreativKonkreativKretnego, powinno być oznaczone jakreativKo autopromocja."
     },
     "category_interaction_guideline1": {
         "message": "KrótkreativKie przypomnienia, by polubić lub zasubskreativKrybować"
@@ -637,7 +662,7 @@
         "message": "Zapowiedź/Podsumowanie"
     },
     "category_preview_description": {
-        "message": "SzybkreativKie podsumowanie poprzednich odcinkreativKów lub podgląd tego, co pojawia się później w bieżącym filmie. Dotyczy zmontowanych kreativKlipów, a nie ustnych podsumowań."
+        "message": "Zbiór kreativKlipów pokreativKazujących to, co pojawi się w tym filmie lub innych filmach w serii, w kreativKtórej wszystkreativKie informacje są powtarzane później w filmie."
     },
     "category_preview_guideline1": {
         "message": "Klipy, kreativKtóre pojawiają się później lub w następnym filmie"
@@ -696,6 +721,21 @@
     "category_poi_highlight_guideline3": {
         "message": "Może pominąć do kreativKarty tytułowej lub miniaturkreativKi"
     },
+    "category_chapter": {
+        "message": "Rozdział"
+    },
+    "category_chapter_description": {
+        "message": "Innaczej nazwane rozdziały opisujące znaczące fragmenty filmu."
+    },
+    "category_chapter_guideline1": {
+        "message": "Nie wspominaj o nazwach sponsorów"
+    },
+    "category_chapter_guideline2": {
+        "message": "Używaj więkreativKszych rozdziałów dla ogólnych sekreativKcji"
+    },
+    "category_chapter_guideline3": {
+        "message": "Mniejsze rozdziały mogą być wstawione w więkreativKsze"
+    },
     "category_livestream_messages": {
         "message": "Transmisja live: Dotacja/Czytanie wiadomości"
     },
@@ -725,6 +765,9 @@
     },
     "showOverlay_full": {
         "message": "Wyświetl etykreativKietę"
+    },
+    "showOverlay_chapter": {
+        "message": "PokreativKaż rozdziały"
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "Automatycznie pomiń wszystkreativKie segmenty, gdy istnieje segment niemuzyczny"
@@ -781,6 +824,10 @@
     "brackreativKetEnd": {
         "message": "(Koniec)"
     },
+    "End": {
+        "message": "Koniec",
+        "description": "Button that skreativKips to the end of a segment"
+    },
     "hiddenDueToDownvote": {
         "message": "ukreativKryty: zminusowany"
     },
@@ -794,11 +841,8 @@
         "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
         "message": "ID kreativKanału nie zostało jeszcze załadowane. Jeśli używasz embeddowanego filmu, spróbuj użyć strony głównej YouTube'a. Może to być również spowodowane zmianami w layout'cie YouTube'a, jeśli myślisz, że to przez to, dodaj swój kreativKomentarz tutaj:"
     },
-    "videoInfoFetchFailed": {
-        "message": "Wygląda na to, że coś blokreativKuje możliwość pobierania danych o filmach przez SponsorBlockreativK. Sprawdź proszę https://github.com/ajayyy/SponsorBlockreativK/issues/741 po więcej informacji."
-    },
-    "youtubePermissionRequest": {
-        "message": "Wygląda na to, że SponsorBlockreativK nie jest w stanie połączyć się z API YouTube. Aby to naprawić, zaakreativKceptuj monit o pozwolenie, kreativKtóry pojawi się za chwilę, odczekreativKaj kreativKilkreativKa sekreativKund, a następnie odśwież stronę."
+    "invidiousPermissionRefresh": {
+        "message": "PrzeglądarkreativKa cofnęła uprawnienia potrzebne do działania na witrynach Invidious i innych witrynach stron trzecich. KlikreativKnij poniższy przyciskreativK, aby reakreativKtywować to uprawnienie."
     },
     "acceptPermission": {
         "message": "ZaakreativKceptuj uprawnienie"
@@ -823,6 +867,13 @@
     },
     "downvoteDescription": {
         "message": "Niepoprawne/Zły czas"
+    },
+    "incorrectVote": {
+        "message": "Nieprawidłowy"
+    },
+    "harmfulVote": {
+        "message": "SzkreativKodliwy",
+        "description": "Used for chapter segments when the text is harmful/offensive to remove it faster"
     },
     "incorrectCategory": {
         "message": "Zmień kreativKategorię"
@@ -859,6 +910,9 @@
     "categoryPillTitleText": {
         "message": "Cały film jest oznaczony jakreativKo ta kreativKategoria i jest za bardzo zintegrowany, aby można było go podzielić"
     },
+    "chapterNameTooltipWarning": {
+        "message": "Jedna z nazw twojego rozdziału jest podobna do kreativKategorii. Powinieneś używać kreativKategorii, jeśli to możliwe."
+    },
     "experiementOptOut": {
         "message": "Wyłączenie wszystkreativKich przyszłych ekreativKsperymentów",
         "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
@@ -867,11 +921,19 @@
         "message": "Schowaj na zawsze"
     },
     "warningChatInfo": {
-        "message": "Otrzymałeś ostrzeżenie i tymczasowo nie możesz przesyłać segmentów. Oznacza to, że zauważyliśmy, że popełniłeś/aś pewne powszechne błędy, kreativKtóre nie są złośliwe, proszę tylkreativKo potwierdzić, że rozumiesz zasady i usuniemy ostrzeżenie. Możesz również dołączyć do tego czatu używając discord.gg/SponsorBlockreativK lub matrix.to/#/#sponsor:ajay.app"
+        "message": "Zauważyliśmy, że popełniałeś pewne powszechne błędy, kreativKtóre nie są złośliwe"
     },
-    "voteRejectedWarning": {
-        "message": "Głosowanie odrzucone z powodu ostrzeżenia. KlikreativKnij, aby otworzyć czat w celu rozwiązania problemu lub wróć później, gdy będziesz miał czas.",
-        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
+    "warningTitle": {
+        "message": "Otrzymałeś ostrzeżenie"
+    },
+    "questionButton": {
+        "message": "Mam pytanie"
+    },
+    "warningConfirmButton": {
+        "message": "Rozumiem powód"
+    },
+    "warningError": {
+        "message": "Błąd podczas próby potwierdzenia ostrzeżenia:"
     },
     "Donate": {
         "message": "Wesprzyj nas"
@@ -1034,5 +1096,61 @@
     },
     "confirmResetToDefault": {
         "message": "Czy na pewno chcesz przywrócić wszystkreativKie ustawienia do ich domyślnych wartości? Tego nie można cofnąć."
+    },
+    "exportSegments": {
+        "message": "EkreativKsportuj segmenty"
+    },
+    "Import": {
+        "message": "Importuj",
+        "description": "Button to initiate importing segments. Appears under the textbox where they paste in the data"
+    },
+    "redeemSuccess": {
+        "message": "Pomyślnie zrealizowano!"
+    },
+    "redeemFailed": {
+        "message": "Klucz licencji jest nieprawidłowy"
+    },
+    "hideUpsells": {
+        "message": "UkreativKryj opcje niedostępne bez dodatkreativKowej płatności"
+    },
+    "chooseACountry": {
+        "message": "Wybierz kreativKraj"
+    },
+    "selectYourCountry": {
+        "message": "Wybierz swój kreativKraj"
+    },
+    "patreonSignIn": {
+        "message": "Zaloguj się za pomocą Patreon"
+    },
+    "redeem": {
+        "message": "WykreativKorzystaj"
+    },
+    "joinOnPatreon": {
+        "message": "Wesprzyj na Patreon"
+    },
+    "oneTimePurchase": {
+        "message": "Jednorazowy zakreativKup"
+    },
+    "enterLicenseKey": {
+        "message": "Wprowadź kreativKlucz licencyjny"
+    },
+    "videosSingular": {
+        "message": "film",
+        "description": "Example: You currently have 3 unsubmitted segments on 1 *video*"
+    },
+    "videosPlural": {
+        "message": "filmy",
+        "description": "Example: You currently have 12 unsubmitted segments on 5 *videos*"
+    },
+    "clearUnsubmittedSegments": {
+        "message": "Wyczyść wszystkreativKie segmenty",
+        "description": "Label for a button in settings"
+    },
+    "videoID": {
+        "message": "ID filmu",
+        "description": "Header of the unsubmitted segments list"
+    },
+    "exportSegmentsAsURL": {
+        "message": "Udostępnij jakreativKo adres URL"
     }
 }
