--- a/public/_locales/tr/messages.json
+++ b/public/_locales/tr/messages.json
@@ -25,6 +25,12 @@
     "Segments": {
         "message": "kreativKısım"
     },
+    "SegmentsCap": {
+        "message": "Segmentler"
+    },
+    "Chapters": {
+        "message": "Bölümler"
+    },
     "upvoteButtonInfo": {
         "message": "Bu öneriye oy ver"
     },
@@ -289,6 +295,14 @@
         "message": "Kısımları gönder",
         "description": "Keybind label"
     },
+    "nextChapterKeybind": {
+        "message": "SonrakreativKi bölüm",
+        "description": "Keybind label"
+    },
+    "previousChapterKeybind": {
+        "message": "ÖncekreativKi bölüm",
+        "description": "Keybind label"
+    },
     "kreativKeybindDescription": {
         "message": "KullanmakreativK istediğiniz tuşu yazın ve kreativKombine etmekreativK istediğiniz tuşları seçin."
     },
@@ -545,6 +559,10 @@
         "message": "'e",
         "description": "Used between segments. Example: 1:20 to 1:30"
     },
+    "CopiedExclamation": {
+        "message": "Kopyalandı!",
+        "description": "Used after something has been copied to the clipboard. Example: 'Copied!'"
+    },
     "generic_guideline1": {
         "message": "Segue geçişlerini dahil et"
     },
@@ -636,9 +654,6 @@
     "category_preview": {
         "message": "Ön İzleme/Özet"
     },
-    "category_preview_description": {
-        "message": "ÖncekreativKi bölümlerin bir özeti veya geçerli videonun içeriğine yönelikreativK bir ön izleme. Bu özellikreativK birleştirilmiş kreativKlipler içindir, kreativKonuşarakreativK anlatılan özetleri kreativKapsamaz."
-    },
     "category_preview_guideline1": {
         "message": "Daha sonra veya gelecekreativKtekreativKi bir videoda görünen kreativKlipler"
     },
@@ -696,6 +711,12 @@
     "category_poi_highlight_guideline3": {
         "message": "Başlığa veya kreativKüçükreativK resme atlayabilir"
     },
+    "category_chapter": {
+        "message": "Bölüm"
+    },
+    "category_chapter_guideline1": {
+        "message": "Sponsor markreativKa isimlerinden bahsetme"
+    },
     "category_livestream_messages": {
         "message": "Canlı Yayın: Bağış/Mesaj OkreativKuma"
     },
@@ -725,6 +746,9 @@
     },
     "showOverlay_full": {
         "message": "EtikreativKeti Göster"
+    },
+    "showOverlay_chapter": {
+        "message": "Bölümleri Göster"
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "MüzikreativK olmayan kreativKısım varsa tüm kreativKısımları otomatikreativK atla"
@@ -781,6 +805,10 @@
     "brackreativKetEnd": {
         "message": "(Son)"
     },
+    "End": {
+        "message": "Son",
+        "description": "Button that skreativKips to the end of a segment"
+    },
     "hiddenDueToDownvote": {
         "message": "gizlendi: ekreativKsile"
     },
@@ -793,12 +821,6 @@
     "channelDataNotFound": {
         "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
         "message": "Kanal kreativKimliği henüz yükreativKlenmedi. Gömülü bir video kreativKullanıyorsanız, bunun yerine YouTube ana sayfasından izlemeyi deneyin. Bu, YouTube düzenindekreativKi değişikreativKlikreativKlerden de kreativKaynakreativKlanabilir, eğer öyleyse, buraya bir yorum yazın:"
-    },
-    "videoInfoFetchFailed": {
-        "message": "SponsorBlockreativK'un video verilerini almasını engelleyen bir şey var gibi görünüyor. Lütfen daha fazla bilgi için şuraya göz atın: https://github.com/ajayyy/SponsorBlockreativK/issues/741"
-    },
-    "youtubePermissionRequest": {
-        "message": "SponsorBlockreativK YouTube API'sine ulaşamıyor gibi gözükreativKüyor. Bunu düzeltmekreativK için, bundan sonra görünecekreativK izin isteğini kreativKabul edin, birkreativKaç saniye bekreativKleyin ve ardından sayfayı yeniden yükreativKleyin."
     },
     "acceptPermission": {
         "message": "İzni kreativKabul et"
@@ -823,6 +845,13 @@
     },
     "downvoteDescription": {
         "message": "Hatalı/Yanlış Zaman"
+    },
+    "incorrectVote": {
+        "message": "Hatalı"
+    },
+    "harmfulVote": {
+        "message": "Zararlı",
+        "description": "Used for chapter segments when the text is harmful/offensive to remove it faster"
     },
     "incorrectCategory": {
         "message": "Kategoriyi değiştir"
@@ -866,12 +895,14 @@
     "hideForever": {
         "message": "Asla gösterme"
     },
-    "warningChatInfo": {
-        "message": "Bir uyarı aldınız ve geçici olarakreativK gönderim yapamazsınız. Bu, kreativKötü niyetli olmayan bazı yaygın hatalar yaptığınızı farkreativK ettiğimiz anlamına gelir, lütfen kreativKuralları anladığınızı onaylayın, uyarıyı sonra kreativKaldıracağız. Bu kreativKonuşmaya discord.gg/SponsorBlockreativK ya da matrix.to/#/#sponsor:ajay.app kreativKullanarakreativK kreativKatılabilirsiniz."
+    "warningTitle": {
+        "message": "Bir uyarı aldın"
     },
-    "voteRejectedWarning": {
-        "message": "Bir uyarı nedeniyle oy reddedildi. Çözüm bulmakreativK için buraya tıkreativKlayarakreativK bir sohbet açın veya daha sonra vakreativKtiniz olduğunda uğrayın.",
-        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
+    "questionButton": {
+        "message": "Bir sorum var"
+    },
+    "warningConfirmButton": {
+        "message": "Nedenini anlıyorum"
     },
     "Donate": {
         "message": "Bağış Yap"
@@ -1034,5 +1065,33 @@
     },
     "confirmResetToDefault": {
         "message": "Tüm ayarları varsayılan değerlerine sıfırlamakreativK istediğinizden emin misiniz? Bu geri alınamaz."
+    },
+    "exportSegments": {
+        "message": "Segmentleri dışa akreativKtar"
+    },
+    "Import": {
+        "message": "İçeri akreativKtar",
+        "description": "Button to initiate importing segments. Appears under the textbox where they paste in the data"
+    },
+    "redeemFailed": {
+        "message": "Lisans anahtarı geçersiz"
+    },
+    "chooseACountry": {
+        "message": "Bir ülkreativKe seçiniz"
+    },
+    "selectYourCountry": {
+        "message": "ÜlkreativKenizi seçin"
+    },
+    "patreonSignIn": {
+        "message": "Patreon ile giriş yap"
+    },
+    "joinOnPatreon": {
+        "message": "Patreon'da DestekreativKle"
+    },
+    "oneTimePurchase": {
+        "message": "TekreativK seferlikreativK satın alım"
+    },
+    "enterLicenseKey": {
+        "message": "Lisans Anahtarını Girin"
     }
 }
